# doc/api.yaml
@@ -18,6 +18,9 @@ components:
         login:
           type: string
           example: 'TestUser'
+          login:
+          type: string
+          example: '12345'
         version:
           type: number
           example: 1
@@ -30,6 +33,7 @@ components:
       required:
         - id
         - login
+        - password
     Artist:
       type: object
       properties:
@@ -45,6 +49,7 @@ components:
       required:
         - id
         - name
+        - grammy
     Album:
       type: object
       properties:
@@ -64,6 +69,7 @@ components:
       required:
         - id
         - name
+        - year
     Track:
       type: object
       properties:
@@ -107,6 +113,10 @@ components:
   responses:
     UnauthorizedError:
       description: Access token is missing or invalid
+    BadRequestError:
+      description: Bad request. Not UUID type of id
+    ForbiddenError:
+      description: Wrong data
   securitySchemes:
     bearerAuth:
       type: http
@@ -158,7 +168,7 @@ paths:
     post:
       tags:
         - Signup
-      security: [ ]
+      security: []
       summary: Signup
       description: Signup a user
       requestBody:
@@ -189,7 +199,7 @@ paths:
           description: Bad request
         409:
           description: Conflict. Login already exists
-  /users:
+  /user:
     get:
       tags:
         - Users
@@ -239,7 +249,7 @@ paths:
           description: Bad request. body does not contain required fields
         401:
           $ref: '#/components/responses/UnauthorizedError'
-  /users/{userId}:
+  /user/{userId}:
     parameters:
       - name: userId
         in: path
@@ -259,7 +269,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/User'
         400:
-          description: Bad request. userId is invalid (not uuid)
+          description: '#/components/responses/BadRequestError'
         401:
           $ref: '#/components/responses/UnauthorizedError'
         404:
@@ -312,7 +322,7 @@ paths:
                     type: integer
                     example: 1655999999
         400:
-          description: Bad request. userId is invalid (not uuid)
+          description: '#/components/responses/BadRequestError'
         401:
           $ref: '#/components/responses/UnauthorizedError'
         403:
@@ -321,6 +331,12 @@ paths:
           description: User not found
 
     delete:
+      parameters:
+      - name: userId
+        in: path
+        required: true
+        schema:
+          type: string
       tags:
         - Users
       summary: Delete user
@@ -329,12 +345,12 @@ paths:
         204:
           description: The user has been deleted
         400:
-          description: Bad request. userId is invalid (not uuid)
+          description: '#/components/responses/BadRequestError'
         401:
           $ref: '#/components/responses/UnauthorizedError'
         404:
           description: User not found
-  /tracks:
+  /track:
     get:
       tags:
         - Track
@@ -385,10 +401,10 @@ paths:
               schema:
                 $ref: '#/components/schemas/Track'
         400:
-          description: Bad request. body does not contain required fields
+          description: '#/components/responses/BadRequestError'
         401:
           $ref: '#/components/responses/UnauthorizedError'
-  /tracks/{id}:
+  /track/{id}:
     parameters:
       - name: id
         in: path
@@ -409,7 +425,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Track'
         400:
-          description: Bad request. trackId is invalid (not uuid)
+          description: '#/components/responses/BadRequestError'
         401:
           $ref: '#/components/responses/UnauthorizedError'
         404:
@@ -473,7 +489,7 @@ paths:
                     format: uuid
                     nullable: true
         400:
-          description: Bad request. trackId is invalid (not uuid)
+          description: '#/components/responses/BadRequestError'
         401:
           $ref: '#/components/responses/UnauthorizedError'
         404:
@@ -487,12 +503,12 @@ paths:
         204:
           description: Deleted successfully
         400:
-          description: Bad request. trackId is invalid (not uuid)
+          description: '#/components/responses/BadRequestError'
         401:
           $ref: '#/components/responses/UnauthorizedError'
         404:
           description: Track was not found.
-  /albums:
+  /album:
     get:
       tags:
         - Album
@@ -541,10 +557,10 @@ paths:
               schema:
                 $ref: '#/components/schemas/Album'
         400:
-          description: Bad request. body does not contain required fields
+          description: '#/components/responses/BadRequestError'
         401:
           $ref: '#/components/responses/UnauthorizedError'
-  /albums/{id}:
+  /album/{id}:
     parameters:
       - name: id
         in: path
@@ -565,7 +581,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Album'
         400:
-          description: Bad request. albumId is invalid (not uuid)
+          description: '#/components/responses/BadRequestError'
         401:
           $ref: '#/components/responses/UnauthorizedError'
         404:
@@ -602,7 +618,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Album'
         400:
-          description: Bad request. albumId is invalid (not uuid)
+          description: '#/components/responses/BadRequestError'
         401:
           $ref: '#/components/responses/UnauthorizedError'
         404:
@@ -616,12 +632,12 @@ paths:
         204:
           description: Deleted successfully
         400:
-          description: Bad request. albumId is invalid (not uuid)
+          description: '#/components/responses/BadRequestError'
         401:
           $ref: '#/components/responses/UnauthorizedError'
         404:
           description: Album was not found.
-  /artists:
+  /artist:
     get:
       tags:
         - Artist
@@ -668,7 +684,7 @@ paths:
           description: Bad request. body does not contain required fields
         401:
           $ref: '#/components/responses/UnauthorizedError'
-  /artists/{id}:
+  /artist/{id}:
     parameters:
       - name: id
         in: path
@@ -689,7 +705,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Artist'
         400:
-          description: Bad request. artistId is invalid (not uuid)
+          description: '#/components/responses/BadRequestError'
         401:
           $ref: '#/components/responses/UnauthorizedError'
         404:
@@ -721,7 +737,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Artist'
         400:
-          description: Bad request. artistId is invalid (not uuid)
+          description: '#/components/responses/BadRequestError'
         401:
           $ref: '#/components/responses/UnauthorizedError'
         404:
@@ -735,7 +751,7 @@ paths:
         204:
           description: Deleted successfully
         400:
-          description: Bad request. artistId is invalid (not uuid)
+          description: '#/components/responses/BadRequestError'
         401:
           $ref: '#/components/responses/UnauthorizedError'
         404:
@@ -844,7 +860,7 @@ paths:
         201:
           description: Added successfully
         400:
-          description: Bad request. artistId is invalid (not uuid)
+          description: '#/components/responses/BadRequestError'
         401:
           $ref: '#/components/responses/UnauthorizedError'
         422:
@@ -858,7 +874,7 @@ paths:
         204:
           description: Deleted successfully
         400:
-          description: Bad request. artistId is invalid (not uuid)
+          description: '#/components/responses/BadRequestError'
         401:
           $ref: '#/components/responses/UnauthorizedError'
         404:
